Made conveyancing form more accessible on mobile, fixed links not being clickable on mobile in footer

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -37,6 +37,9 @@ a:hover {
 }
 section {
 	transition: all 0.5s ease;
+	position: relative;
+	width: 100%;
+	z-index: 1;
 }
 .body-overlay {
 	position: fixed;
@@ -374,7 +377,6 @@ main {
     z-index: 2;
     overflow: hidden;
     transition: height 0.5s ease;
-    backface-visibility: hidden;
 }
 .blur-preview,
 .parallax-overlay,
@@ -419,9 +421,6 @@ main {
 	transition: color 0.7s ease;
 	cursor: default;
 }
-.parallax-window .banner-text:hover {
-
-}
 .parallax-window .banner-text span {
 	position: relative;
 	color: #fff !important;
@@ -446,9 +445,10 @@ main {
 	transform: translate3d(0,0,0);
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	transform: translateZ(0px) !important;
+	will-change: transform;
+	transform: translateZ(0) !important;
 	width: 100%;
-	transition: transform 1s ease;
+	transition: unset !important;
 }
 
 /*Loaded styles - hide the blur preview*/
@@ -460,10 +460,6 @@ main {
 }
 /*----------------ABOUT SECTION----------------*/
 
-section {
-	position: relative;
-	width: 100%;
-}
 .about {
 	background: #f5f5f5;
 }
@@ -797,7 +793,7 @@ footer {
 	left: 0;
 	bottom: 0;
 	opacity: 1;
-	z-index: -1;
+	z-index: 0;
 	padding: 10px 0px;
 }
 footer * {
@@ -1890,6 +1886,7 @@ section.client-centre {
 	}
 }
 @media only screen and (max-width: 479px){
+
 	/*NAV*/
 	.mobile-nav .logo img,
 	.navbar-brand img,
@@ -1902,6 +1899,7 @@ section.client-centre {
 	    bottom: -25px;
 	    font-size: 12px;
 	}
+
 	/*MOBILE NAV*/
 	.mobile-nav .vertical-align {
 		display: block;
@@ -1954,10 +1952,14 @@ section.client-centre {
 		margin-right: unset;
 	}
 	.hidden-forms .container.conveyancing-page {
-		height: 1450px;
+		height: 100%;
 	}
 	.hidden-forms .container.engagement-page {
-		height: 3300px;
+		height: 100%;
+	}
+	.conveyancing-page input.half, 
+	.conveyancing-page select.half {
+		flex-basis: 100%;
 	}
 
 	/*CONTACT PAGE*/
@@ -1970,7 +1972,7 @@ section.client-centre {
 		padding: 20px 0px 20px;
 	}
 	footer .container {
-	    padding: 40px 20px 0px;
+	    padding: 20px;
 	}
 	footer .footer-container {
 		flex-basis: 100%;
